# speedclaim

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  SpeedClaim.slnx  TEST_CHECKLIST.md  coverage.sh  seed.sh  seed.sql
ai-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-service/migrations/: env.py
ai-service/migrations/versions/: 20260715_0001_create_rag_vector_schema.py
ai-service/src/speedclaim_ai/: __init__.py  errors.py  kyc_workflow.py  main.py  middleware.py  speedy.py  workspace.py
ai-service/src/speedclaim_ai/api/: dependencies.py  health.py  ingestion.py  policy_qa.py  speedy.py  workspace.py
ai-service/src/speedclaim_ai/config/: __init__.py  logging.py  settings.py
ai-service/src/speedclaim_ai/contracts/: __init__.py  brochure.py  policy_qa.py  speedy.py  workspace.py
ai-service/tests/: conftest.py
ai-service/tests/evaluation/: test_policy_qa_natural_questions.py
ai-service/tests/integration/: test_chat_provider_selection.py  test_errors_and_limits.py  test_health.py  test_ingestion_endpoint.py  test_pgvector_repository.py  test_policy_qa_endpoint.py  test_security.py
ai-service/tests/unit/: test_answer_service.py  test_anthropic_gateway_chat_provider.py  test_azure_blob_brochure_reader.py  test_chunker.py  test_citations.py  test_customer_tool_catalog.py  test_embedding_provider.py  test_groq_chat_provider.py  test_ingestion_service.py  test_local_brochure_reader.py  test_logging.py  test_pdf_parser.py  test_retrieval_service.py  test_settings.py  test_speedy.py  test_vector_repository.py  test_workspace.py
(+1120 files in other folders)
