[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speedclaim-ai"
version = "0.2.0"
description = "Private AI service for SpeedClaim policy brochure RAG"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "fastembed==0.8.0",
  "onnxruntime==1.27.0",
  "pgvector==0.5.0",
  "psycopg[binary]==3.3.4",
  "pydantic==2.12.5",
  "pydantic-settings==2.14.2",
  "SQLAlchemy==2.0.51",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
test = [
  "httpx2==2.7.0",
  "pytest==9.1.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "database: requires an isolated PostgreSQL database with pgvector",
]
